<resources>
    <string name="app_name">Phuc_cdr_AndroidTutorial</string>
    <string name="start_secondary">Start Secondary</string>
    <string name="hello_world">Hello World</string>
    <string name="click">Click</string>
    <string name="hello">Hello</string>
    <string name="registerforactivityresultexample">RegisterForActivityResultExample</string>
    <string name="naigateexample">NaigateExample</string>
    <string name="navigate_to_secondary_activity">Navigate to Secondary Activity</string>
    <string name="navigate_to_third_activity">Navigate to Third Activity</string>
    <string name="navtolifecyclennavexamplenavactivity">NavToLifecyclenNavExampleNavActivity</string>
    <string name="kh_ng_th_y_d_li_u_c_g_i">Không thấy dữ liệu được gửi :)))</string>
    <string name="kh_ng_th_y_d_li_u_c_g_i_2">Không thấy dữ liệu được gửi :)</string>
    <string name="button_navigate_to_dashboard">Navigate to Dashboard (Demo ViewModel)</string>
    <string name="navigate_to_lifecycle_example">Navigate to Lifecycle Example</string>
    <string name="navigate_home_activity_demo_launch_mode">Navigate Home Activity Demo Launch Mode</string>
    <string name="open_new_notification">Open new Notification</string>
    <string name="navigate_to_launch_mode_example_activity">Navigate to Launch Mode Example Activity</string>
    <string name="naviogate_to_sender_data_activity">Naviogate to Sender Data Activity</string>
    <string name="choose_file">Choose file</string>
    <string name="navigate_to_register_for_activity_result">Navigate to register for activity result</string>
    <string name="select_image">Select Image</string>
    <string name="navigate_to_select_image_activity">Navigate to Select Image Activity</string>
    <string name="navigate_to_registerforactivityresult">Navigate to RegisterForActivityResult</string>
    <string name="button_navigate_to_clear_top_flag">Button navigate to clear top flag</string>
    <string name="button_navigate_to_new_task_flag">Button navigate to new task flag</string>
    <string name="btn_navigate_to_single_top_flag">Button navigate to single top flag</string>
    <string name="senddatawithintent">SendDataWithIntent</string>
    <string name="send_data_with_bundle">Send data with bundle</string>
    <string name="optimize_storage_get_space">Optimize Storage, Get Space</string>
    <string name="_8_99_week"><strike><b>$8.99</b>/week</strike></string>
    <string name="off_50">OFF 50%</string>
    <string name="_3_99">$3.99</string>
    <string name="week">/week</string>
    <string name="claim_offer">CLAIM OFFER</string>
    <string name="_3_99_for_first_week_then_8_99_next_week_n_billed_weekly_cancel_anytime">$3.99 for first week then $8.99 next week.\n Billed weekly, cancel anytime.</string>
    <string name="by_continuing_you_agree_to_our_terms_and_privacy_policies_n_subscription_gives_you_access_to_v9compress_s_premium_features_all_ads_will_be_removed_n_subscription_plans_are_automatically_renewed_and_can_be_canceled_anytime_in_subscriptions_on_google_play_n_you_will_not_be_charged_if_subscription_is_canceled_before_trial_period_ends_n_subscription_is_not_required_to_use_v9compress">By continuing you agree to our Terms and Privacy policies.\n• Subscription gives you access to V9Compress\'s premium features, all ads will be removed.\n• Subscription plans are automatically renewed and can be canceled anytime in Subscriptions on Google Play.\n• You will not be charged if subscription is canceled before trial period ends.\n• Subscription is not required to use V9Compress.</string>
    <string name="faster_compress_made_simple">Faster Compress Made Simple</string>
    <string name="_30percent">30%</string>
    <string name="try_3_for_free_then_price_per_year_n_auto_renew_cancel_anytime">Try 3 for FREE then $[price] per year.\n Auto renew, cancel anytime.</string>
    <string name="try_3_days_for_free_then_8_99_per_week">Try 3 days for FREE, then 8.99$ per week.\nAuto renew, cancel anytime</string>
    <string name="we_couldnt_load_the_information">We couldn’t load the information</string>
    <string name="try_again"><u>Try Again</u></string>
    <string name="yearly">Yearly</string>
    <string name="weekly">Weekly</string>
    <string name="show_dialog">Show dialog</string>
    <string name="shrink_size_keep_quality">SHRINK SIZE\nKEEP QUALITY</string>
    <string name="_14_99_year_after_free_trial_ends_auto_renew_cancel_anytime">$14.99/year after free trial ends.\nAuto renew, Cancel anytime</string>
    <string name="free_trial_enabled">Free trial enabled</string>
    <string name="try_for_free">Try for free</string>
    <string name="by_continuing_you_agree_to_our_terms_and_privacy_policies_subscription_gives_you_access_to_v9compress_s_premium_features_all_ads_will_be_removed_subscription_plans_are_automatically_renewed_and_can_be_canceled_anytime_in_subscriptions_on_google_play_you_will_not_be_charged_if_subscription_is_canceled_before_trial_period_ends_subscription_is_not_required_to_use_v9compress">By continuing you agree to our Terms and Privacy policies.\nSubscription gives you access to V9Compress\'s premium features, all ads will be removed.\nSubscription plans are automatically renewed and can becanceled anytime in Subscriptions on Google Play.\nYou will not be charged if subscription is canceled before trial period ends.\nSubscription is not required to use V9Compress</string>
    <string name="continue1">CONTINUE</string>
    <string name="introductionYearlyEligible">$14.99/year after free trial ends.\nAuto renew, Cancel anytime</string>
    <string name="introductionWeeklyEligible">$4.99/week after free trial ends.\nAuto renew, Cancel anytime</string>
    <string name="introductionYearlyNotEligible">$14.99/year.\nAuto renew, Cancel anytime</string>
    <string name="introductionWeeklyNotEligible">$4.99/week.\nAuto renew, Cancel anytime</string>
    <string name="high_quality_ncompression">high-quality\ncompression</string>
    <string name="navigate_to_unlock_feature">Navigate to unlock feature</string>
    <string name="navigate_to_yearly_subscription">Navigate to yearly subscription</string>
    <string name="navigate_to_yearly_subscription_full_screen">Navigate to yearly subscription full screen</string>
    <string name="smarter_storage_made_affordable">SMARTER STORAGE MADE\nAFFORDABLE</string>
    <string name="saved_92">Saved 92%</string>
    <string name="yearly_plan">Yearly Plan</string>
    <string name="only_0_412_per_week">Only $0.412 per week</string>
    <string name="_19_99">$19.99</string>
    <string name="year">/year</string>
    <string name="weekly_plan">Weekly Plan</string>
    <string name="_4_99">$4.99</string>
    <string name="_4_99_week_after_free_trial_ends_auto_renew_cancel_anytime">$4.99/week after free trial ends.\nAuto renew, cancel anytime</string>
    <string name="_3_day_free_trial_enabled">3-day free trial enabled</string>
    <string name="introduceSaleYearlyEligible">$19.99/year after free trial ends.\nAuto renew, cancel anytime</string>
    <string name="introduceSaleWeeklyEligible">$4.99/week after free trial ends.\nAuto renew, cancel anytime</string>
    <string name="introduceSaleYearlyNotEligible">Auto renew at $19.99/year</string>
    <string name="introduceSaleWeeklyNotEligible">Auto renew at $4.99/week</string>
    <string name="cancel_anytime">Cancel anytime</string>


</resources>