<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet_paywall_50percent"
    android:padding="@dimen/_14sdp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_17sdp"
        android:fontFamily="@font/funnel_sans_semi_bold"
        android:gravity="center"
        android:text="@string/optimize_storage_get_space"
        android:textColor="@color/white"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtPriceWeekly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/funnel_sans_medium"
        android:text="@string/_8_99_week"
        android:textColor="@color/color_EAF5F8"
        app:layout_constraintEnd_toStartOf="@+id/btnOff50"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnOff50"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_18sdp"
        android:layout_marginStart="@dimen/_6sdp"
        android:background="@drawable/bg_button_off_50"
        android:fontFamily="@font/funnel_sans_bold"
        android:text="@string/off_50"
        android:textColor="@color/color_EAF5F8"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/txtPriceWeekly"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtPriceWeekly"
        app:layout_constraintTop_toTopOf="@+id/txtPriceWeekly" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/funnel_sans_bold"
        android:text="@string/_3_99"
        android:textColor="@color/color_EAF5F8"
        android:textSize="@dimen/_37sdp"
        app:layout_constraintEnd_toStartOf="@+id/txtWeek"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPriceWeekly" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtWeek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:fontFamily="@font/funnel_sans_bold"
        android:text="@string/week"
        android:textColor="@color/color_EAF5F8"
        android:textSize="@dimen/_23sdp"
        app:layout_constraintBottom_toBottomOf="@+id/txtPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtPrice"
        app:layout_constraintTop_toTopOf="@+id/txtPrice" />

    <View
        android:id="@+id/frameOverlayLoading"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:background="@drawable/bg_frame_overlay_loading"
        android:elevation="@dimen/_3sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btnClaimOfferLoading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnClaimOffer"
        android:layout_width="0dp"
        android:layout_height="@dimen/_42sdp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_button_claim_offer"
        android:text="@string/claim_offer"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPrice" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnClaimOfferLoading"
        android:layout_width="0dp"
        android:layout_height="@dimen/_42sdp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_button_claim_offer"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPrice" />


    <ProgressBar
        android:id="@+id/progressBarLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:indeterminateTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/btnClaimOfferLoading"
        app:layout_constraintEnd_toEndOf="@id/btnClaimOfferLoading"
        app:layout_constraintStart_toStartOf="@id/btnClaimOfferLoading"
        app:layout_constraintTop_toTopOf="@id/btnClaimOfferLoading" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtPriceDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_9sdp"
        android:fontFamily="@font/funnel_sans_medium"
        android:gravity="center"
        android:text="@string/_3_99_for_first_week_then_8_99_next_week_n_billed_weekly_cancel_anytime"
        android:textColor="@color/white"
        android:textSize="@dimen/_9sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnClaimOffer" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTermsAndPrivacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_9sdp"
        android:fontFamily="@font/funnel_sans_regular"
        android:gravity="center"
        android:lineHeight="@dimen/_10sdp"
        android:padding="16dp"
        android:text="@string/by_continuing_you_agree_to_our_terms_and_privacy_policies_n_subscription_gives_you_access_to_v9compress_s_premium_features_all_ads_will_be_removed_n_subscription_plans_are_automatically_renewed_and_can_be_canceled_anytime_in_subscriptions_on_google_play_n_you_will_not_be_charged_if_subscription_is_canceled_before_trial_period_ends_n_subscription_is_not_required_to_use_v9compress"
        android:textColor="@color/color_EAF5F8"
        android:textSize="@dimen/_7sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPriceDescription" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtCouldntLoadInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_74sdp"
        android:fontFamily="@font/funnel_sans_semi_bold"
        android:text="@string/we_couldnt_load_the_information"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtTryAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/funnel_sans_regular"
        android:text="@string/try_again"
        android:textColor="@color/white"
        android:textSize="@dimen/_10sdp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/txtCouldntLoadInformation"
        app:layout_constraintStart_toStartOf="@+id/txtCouldntLoadInformation"
        app:layout_constraintTop_toBottomOf="@+id/txtCouldntLoadInformation" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/viewGroupLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:constraint_referenced_ids="progressBarLoading,frameOverlayLoading,btnClaimOfferLoading" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/viewGroupFailed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:constraint_referenced_ids="txtCouldntLoadInformation,txtTryAgain" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/viewGroupContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="txtPrice,txtPriceWeekly,btnClaimOffer,txtWeek,btnOff50,txtPriceDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>